spec: Create first draft of Publsiher Endpoints and Publisher Descriptors
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.bib
+++ b/spec/cx.bib
@@ -72,6 +72,34 @@
   url = {https://tools.ietf.org/html/rfc5652},
   note = {\url{https://tools.ietf.org/html/rfc5652}},
 }
+@techreport{RFC7468,
+  author = {S. Josefsson, S.Leonard},
+  title = {Textual Encodings of {PKIX}, {PKCS}, and {CMS} Structures},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = {7468},
+  year = {2015},
+  month = {April},
+  issn = {2070-1721},
+  publisher = {RFC Editor},
+  institution = {IETF},
+  url = {https://tools.ietf.org/html/rfc7468},
+  note = {\url{https://tools.ietf.org/html/rfc7468}},
+}
+@techreport{RFC8259,
+  author = {T. Bray (Ed.)},
+  title = {The {JavaScript} Object Notation {(JSON)} Data Interchange Format},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = {8259},
+  year = {2017},
+  month = {December},
+  issn = {2070-1721},
+  publisher = {RFC Editor},
+  institution = {IETF},
+  url = {https://tools.ietf.org/html/rfc8259},
+  note = {\url{https://tools.ietf.org/html/rfc8259}},
+}
 @techreport{X.680,
   author = {{International Telecommunication Union}},
   title = {Information Technology --- {Abstract} {Syntax} {Notation} {One} {(ASN.1)}: Specification of basic notation},
@@ -97,4 +125,10 @@
   key = {OpenSSL},
   url = {https://www.openssl.org/},
   note = {\url{https://www.openssl.org/}},
+}
+@misc{JSONSchema,
+  title = {{JSON} schema},
+  key = {JSON schema},
+  url = {https://json-schema.org/},
+  note = {\url{https://json-schema.org/}},
 }
